# QEStrategyForge

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  plan.md  pyproject.toml  tmp_greenfield_output.md
benchmarks/: README.md  artifact-brownfield.assertions.yaml  artifact-greenfield.assertions.yaml  brownfield-partial-automation.assertions.yaml  brownfield-partial-automation.input.yaml  greenfield-aggressive-timeline.assertions.yaml  greenfield-aggressive-timeline.input.yaml  greenfield-low-automation.assertions.yaml  greenfield-low-automation.input.yaml  incomplete-context.assertions.yaml  incomplete-context.input.yaml  multi-integration-unstable-dependencies.assertions.yaml  multi-integration-unstable-dependencies.input.yaml  nfr-heavy-api.assertions.yaml  nfr-heavy-api.input.yaml  qestrategyforge-self.assertions.yaml  qestrategyforge-self.input.yaml  regulated-brownfield-manual-release.assertions.yaml  regulated-brownfield-manual-release.input.yaml  strong-automation-weak-governance.assertions.yaml  strong-automation-weak-governance.input.yaml
claude-memory/: insights.md  memory.md  notes.md
docs/: DECISION-RULES.md  IMPLEMENTATION-PLAN.md  LEARNING-GUIDE.md  PHASE-4-IMPLEMENTATION-BACKLOG.md  PHASE-5-IMPLEMENTATION-BACKLOG.md  PHASE-5-IMPLEMENTATION-PLAN.md  PHASE-6-IMPLEMENTATION-BACKLOG.md  PHASE-6-IMPLEMENTATION-PLAN.md  PHASED-IMPLEMENTATION.md  PROMPT-ENGINEERING.md  PUBLISHING-CHECKLIST.md  SCENARIO-LIBRARY.md  SITUATIONS-CATALOGUE.md  STRATEGY-ANTI-PATTERNS.md  STRATEGY-FRAMEWORKS.md  TESTING-TYPE-ACCESSIBILITY.md  TESTING-TYPE-CHAOS.md  (+8 more)
(+85 files in other folders)
